libs/core/proc_macros/sea_orm_resource/tests/ui/missing_table_name.stderr
error: SeaOrmResource requires #[sea_orm(table_name = "...")] attribute
 --> tests/ui/missing_table_name.rs:6:12
  |
6 | pub struct Model {
  |            ^^^^^
