libs/core/proc_macros/sea_orm_resource/tests/ui/missing_table_name.rs
//! Test that missing table_name produces a compile error

use core_proc_macros::SeaOrmResource;

#[derive(SeaOrmResource)]
pub struct Model {
    pub id: i32,
    pub title: String,
}

fn main() {}
